Spacing fix for product tile price

--- a/assets/css/products-grid.css
+++ b/assets/css/products-grid.css
@@ -54,3 +54,8 @@
     font-weight: 600;
     font-size: .9375rem;
 }
+
+.product-grid--shape .product-item-info .product-item-details .price-box {
+    margin-top: .5rem;
+    margin-bottom: 1.5rem;
+}
